--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <header>
       <div class="navbar">
         <div class="logo">
-          <h2>OpenAI Image Generator</h2>
+          <h2> <a href="/"> OpenAI Image Generator </a></h2>
         </div>
         <div class="nav-links">
           <ul>
@@ -56,5 +56,16 @@
     </main>
 
     <div class="spinner"></div>
+
+    <!-- <footer>
+        <section id="copyright">
+            <h4>
+                &copy;
+                <script type="text/javascript"> document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear())) </script> 
+                David Amebley
+            </h4>
+            <h4>Powered by <a href="https://labs.openai.com/" target="_blank">OpenAI</a> and <a href="https://labs.openai.com/" target="_blank">DALL·E</a></h4>
+        </section>
+    </footer> -->
   </body>
 </html>
