Add Save Image Button

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
         <div class="nav-links">
           <ul>
             <li>
+              <a href=""
+                >Previous Searches</a
+              >
+            </li>
+            <li>
               <a href="https://beta.openai.com/docs" target="_blank"
                 >OpenAI API Docs</a
               >
@@ -51,6 +56,7 @@
         <div class="image-container">
           <h2 class="msg"></h2>
           <img src="" alt="" id="image" />
+          <button id="save-image" type="button" class="btn">Save to Previous Searches</button>
         </div>
       </section>
     </main>
