--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
 
-    <script src="js/main.js" defer></script>
+    <!-- <script type="importmap" >
+      { "imports": {
+        "mongodb":      "https://unpkg.com/mongodb@4.3.1/lib/index.js",
+        "mongoclient":  "https://unpkg.com/mongoclient@1.0.3/index.js"
+      } }
+    </script> -->
+    <script src="js/main.js" type="module" defer></script>
     <title>OpenAI Image Generator</title>
   </head>
   <body>
