Prevent duplicate data save

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
         <div class="image-container">
           <h2 class="msg"></h2>
           <img src="" alt="" id="image" />
+          <h3 class="save-msg"></h3>
           <button id="save-image" type="button" class="btn">Save to Previous Searches</button>
         </div>
       </section>
