Update Save button after Image save

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
               <option value="large">Large</option>
             </select>
           </div>
-          <button type="submit" class="btn">Generate Image</button>
+          <button type="submit">Generate Image</button>
         </form>
       </section>
 
