Add new get route for saved images

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/spinner.css" />
-
-    <!-- <script type="importmap" >
-      { "imports": {
-        "mongodb":      "https://unpkg.com/mongodb@4.3.1/lib/index.js",
-        "mongoclient":  "https://unpkg.com/mongoclient@1.0.3/index.js"
-      } }
-    </script> -->
     <script src="js/main.js" type="module" defer></script>
     <title>OpenAI Image Generator</title>
   </head>
@@ -25,7 +18,7 @@
         <div class="nav-links">
           <ul>
             <li>
-              <a href=""
+              <a href="/saved-images"
                 >Previous Searches</a
               >
             </li>
